[package]
name = "anyhow-error-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { git = "https://github.com/tokio-rs/axum.git" }
tokio = { version = "1.29.1", features = ["full"] }
